dependent-funcs v8 optimization in process

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build:mjs": "shx rm -rf dist/mjs/ && shx mkdir -p dist/mjs/ && shx cp -rf src/test dist/mjs/ && shx rm -rf dist/mjs/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/mjs/ --no-babelrc --config-file ./env/babel/configs/dist-mjs.js",
     "build:js": "shx rm -rf dist/js/ && shx mkdir -p dist/js/ && shx cp -rf src/test dist/js/ && shx rm -rf dist/js/**/*.ts && babel src --extensions \".es6,.es,.js,.mjs,.ts\" --out-dir dist/js/ --no-babelrc --config-file ./env/babel/configs/dist-js.js",
     "build:polyfill": "node env/polyfill/build.js",
+    "build:libs": "node env/libs/dependent-func/build.js",
     "build": "npm run build:types && npm run build:mjs && npm run build:js",
     "lint:es": "eslint --plugin markdown --ext js,md .",
     "lint:ts": "tslint --project tsconfig.json --config tslint.json --exclude **/_trash/** src/main/**/*.ts",
@@ -60,31 +61,31 @@
     "ci": "npm run lint && npm run coverage:ci && ncat \"tmp/coverage/all/lcov/**/lcov.info\" --banner \"\" | coveralls"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-async-to-generator": "^7.7.4",
-    "@babel/plugin-transform-classes": "^7.7.4",
-    "@babel/plugin-transform-for-of": "^7.7.4",
-    "@babel/plugin-transform-parameters": "^7.7.7",
-    "@babel/plugin-transform-regenerator": "^7.7.5",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/plugin-transform-typescript": "^7.7.4",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-typescript": "^7.7.7",
-    "@babel/register": "^7.7.7",
-    "@babel/runtime-corejs3": "^7.7.7",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-proposal-throw-expressions": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-async-to-generator": "^7.8.3",
+    "@babel/plugin-transform-classes": "^7.8.3",
+    "@babel/plugin-transform-for-of": "^7.8.4",
+    "@babel/plugin-transform-parameters": "^7.8.4",
+    "@babel/plugin-transform-regenerator": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/plugin-transform-typescript": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "@babel/register": "^7.8.3",
+    "@babel/runtime-corejs3": "^7.8.4",
     "@metahub/karma-rollup-preprocessor": "^4.1.0",
-    "@theintern/leadfoot": "^2.3.0",
+    "@theintern/leadfoot": "^2.3.1",
     "assertion-error": "^1.1.0",
     "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
-    "core-js": "^3.6.0",
-    "core-js-pure": "^3.6.0",
+    "core-js": "^3.6.4",
+    "core-js-pure": "^3.6.4",
     "depcheck": "^0.8.4",
     "electron": "^6.1.7",
     "eslint": "6.1.0",
@@ -94,7 +95,7 @@
     "eslint-plugin-node": "^9.2.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
-    "globby": "^10.0.1",
+    "globby": "^10.0.2",
     "immutable": "^4.0.0-rc.12",
     "istanbul-combine": "^0.3.0",
     "js2cpp": "^1.1.0",
@@ -105,12 +106,12 @@
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.2",
     "karma-electron": "^6.3.0",
-    "karma-firefox-launcher": "^1.2.0",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-opera-launcher": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-rollup-preprocessor": "^7.0.2",
+    "karma-rollup-preprocessor": "^7.0.3",
     "karma-safari-launcher": "^1.0.0",
     "karma-safaritechpreview-launcher": "^2.0.2",
     "lodash": "^4.17.15",
@@ -119,12 +120,12 @@
     "nyc": "^14.1.1",
     "rdtsc": "^2.0.0",
     "regenerator-runtime": "^0.13.3",
-    "rollup": "^1.27.14",
+    "rollup": "^1.31.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.3",
+    "rollup-plugin-terser": "^5.2.0",
     "rollup-pluginutils": "^2.8.2",
     "shx": "^0.3.2",
     "synchronous-promise": "^2.0.10",
@@ -134,7 +135,7 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-no-circular-imports": "^0.7.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.5"
   },
   "peerDependencies": {
     "@babel/runtime-corejs3": "^7.5.5",
