dependent-funcs v8 optimization in process... Add check funcs optimization status

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
+    "@babel/parser": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
@@ -80,9 +81,12 @@
     "@babel/register": "^7.8.3",
     "@babel/runtime-corejs3": "^7.8.4",
     "@metahub/karma-rollup-preprocessor": "^4.1.0",
+    "@rollup/plugin-replace": "^2.3.1",
     "@theintern/leadfoot": "^2.3.1",
     "assertion-error": "^1.1.0",
     "babel-eslint": "^10.0.3",
+    "babel-plugin-search-and-replace": "^1.0.1",
+    "babel-plugin-transform-replace-expressions": "^0.2.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.4",
     "core-js-pure": "^3.6.4",
