--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webrain",
-  "version": "0.0.7",
+  "version": "2.0.0",
   "description": "NodeJS cross-platform and cross-browser business logic framework - Brain of your web applications.",
   "author": "Nikolay Makhonin",
   "homepage": "https://github.com/NikolayMakhonin/webrain.js",
@@ -62,46 +62,46 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/parser": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/parser": "^7.9.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/plugin-proposal-throw-expressions": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-async-to-generator": "^7.8.3",
-    "@babel/plugin-transform-classes": "^7.8.3",
-    "@babel/plugin-transform-for-of": "^7.8.4",
-    "@babel/plugin-transform-parameters": "^7.8.4",
-    "@babel/plugin-transform-regenerator": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/plugin-transform-typescript": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-typescript": "^7.8.3",
-    "@babel/register": "^7.8.3",
-    "@babel/runtime-corejs3": "^7.8.4",
+    "@babel/plugin-transform-classes": "^7.9.5",
+    "@babel/plugin-transform-for-of": "^7.9.0",
+    "@babel/plugin-transform-parameters": "^7.9.5",
+    "@babel/plugin-transform-regenerator": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/plugin-transform-typescript": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/register": "^7.9.0",
+    "@babel/runtime-corejs3": "^7.9.6",
     "@metahub/karma-rollup-preprocessor": "^4.1.0",
-    "@rollup/plugin-replace": "^2.3.1",
-    "@theintern/leadfoot": "^2.3.1",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@theintern/leadfoot": "^2.3.2",
     "assertion-error": "^1.1.0",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
-    "core-js": "^3.6.4",
-    "core-js-pure": "^3.6.4",
+    "core-js": "^3.6.5",
+    "core-js-pure": "^3.6.5",
     "depcheck": "^0.8.4",
-    "electron": "^6.1.8",
-    "eslint": "6.1.0",
-    "eslint-config-pro": "^0.0.4",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-markdown": "^1.0.1",
-    "eslint-plugin-node": "^9.2.0",
+    "electron": "^6.1.12",
+    "eslint": "^7.0.0",
+    "eslint-config-pro": "^1.0.1",
+    "eslint-plugin-html": "^6.0.2",
+    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-node": "^11.1.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "globby": "^10.0.2",
     "immutable": "^4.0.0-rc.12",
     "istanbul-combine": "^0.3.0",
     "karma": "^4.4.1",
-    "karma-browserstack-launcher": "^1.5.1",
+    "karma-browserstack-launcher": "^1.6.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^1.1.2",
     "karma-detect-browsers": "^2.3.3",
@@ -112,7 +112,7 @@
     "karma-mocha": "^1.3.0",
     "karma-opera-launcher": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
-    "karma-rollup-preprocessor": "^7.0.3",
+    "karma-rollup-preprocessor": "^7.0.5",
     "karma-safari-launcher": "^1.0.0",
     "karma-safaritechpreview-launcher": "^2.0.2",
     "lodash": "^4.17.15",
@@ -120,13 +120,13 @@
     "ncat": "^2.0.9",
     "nyc": "^14.1.1",
     "rdtsc": "^2.0.0",
-    "regenerator-runtime": "^0.13.3",
-    "rollup": "^1.31.1",
-    "rollup-plugin-babel": "^4.3.3",
+    "regenerator-runtime": "^0.13.5",
+    "rollup": "^1.32.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.2.0",
+    "rollup-plugin-terser": "^5.3.0",
     "rollup-pluginutils": "^2.8.2",
     "shx": "^0.3.2",
     "tslint": "^5.20.1",
@@ -135,7 +135,7 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-no-circular-imports": "^0.7.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.3"
   },
   "peerDependencies": {
     "@babel/runtime-corejs3": "^7.5.5",
