--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "eslint-plugin-html": "^6.0.2",
     "eslint-plugin-markdown": "^1.0.2",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "globby": "^10.0.2",
