--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "coverage:karma": "karma start ./env/karma/configs/coverage.js",
     "coverage": "npm run coverage:mocha && npm run coverage:karma && npm run test:intern && npm run coverage:merge",
     "coverage:ci": "npm run coverage:mocha && npm run ci:karma && npm run coverage:merge",
-    "coverage:merge": "istanbul-combine -d tmp/coverage/all/lcov -p summary -r lcov \"tmp/coverage/*/json/**.json\"",
+    "coverage:merge:prepare": "shx rm -rf tmp/coverage/merge && node -e \"require('./env/common/helpers').copyToSingleDir('tmp/coverage/merge', 'tmp/coverage/karma/json/**/*.json', 'tmp/coverage/nyc/tmp/*.json')\"",
+    "coverage:merge": "npm run coverage:merge:prepare && nyc report -r lcov --report-dir tmp/coverage/all/lcov --temp-dir \"tmp/coverage/merge/\"",
     "ci:karma": "karma start ./env/karma/configs/ci.js",
     "ci": "npm run lint && npm run coverage:ci && ncat \"tmp/coverage/all/lcov/**/lcov.info\" --banner \"\" | coveralls"
   },
@@ -90,7 +91,7 @@
     "core-js-pure": "^3.6.5",
     "depcheck": "^0.8.4",
     "electron": "^6.1.12",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "eslint-config-pro": "^1.0.2",
     "eslint-plugin-html": "^6.0.2",
     "eslint-plugin-markdown": "^1.0.2",
@@ -100,16 +101,14 @@
     "fs-extra": "^8.1.0",
     "globby": "^10.0.2",
     "immutable": "^4.0.0-rc.12",
-    "istanbul-combine": "^0.3.0",
     "karma": "^4.4.1",
     "karma-browserstack-launcher": "^1.6.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^1.1.2",
+    "karma-coverage": "^2.0.2",
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.2",
     "karma-electron": "^6.3.0",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-opera-launcher": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
