--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webrain",
-  "version": "1.0.0a",
+  "version": "1.0.0-a",
   "description": "NodeJS cross-platform and cross-browser business logic framework - Brain of your web applications.",
   "author": "Nikolay Makhonin",
   "homepage": "https://github.com/NikolayMakhonin/webrain.js",
