--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-sonarjs": "^0.5.0",
     "express": "^4.17.1",
+    "fast-memoize": "^2.5.2",
     "fs-extra": "^8.1.0",
     "globby": "^10.0.2",
     "immutable": "^4.0.0-rc.12",
