--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@metahub/karma-rollup-preprocessor": "^4.1.0",
     "@rollup/plugin-replace": "^2.3.2",
     "@theintern/leadfoot": "^2.3.2",
+    "@types/fs-extra": "^9.0.1",
     "assertion-error": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
