--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"emitDeclarationOnly": true,
 		"outDir": "dist/types",
 		"baseUrl": ".",
-		"target": "ESNext",
+		"target": "ES2019", // for convert option chainings: .? ??
 		"lib": ["dom", "esnext"],
 		"skipLibCheck": true,
 		"stripInternal": true,
