Fix lint configs

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build:libs": "node env/libs/dependent-func/build.js",
     "build": "npm run build:types && npm run build:mjs && npm run build:js",
     "lint:es": "eslint --plugin markdown --ext js,md .",
-    "lint:ts": "tslint --project tsconfig.json --config tslint.json --exclude **/_trash/** src/main/**/*.ts",
+    "lint:ts": "tslint --project tsconfig.eslint.json --config tslint.json --exclude {node_modules,dist,tmp,_trash,docs}/** **/*.ts",
     "lint": "npm run lint:es && npm run lint:ts",
     "test:mocha:src": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./src/test/tests/{node,common}/**/*.*\"",
     "test:mocha:mjs": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./dist/mjs/test/tests/{node,common}/**/*.*\"",
@@ -85,6 +85,7 @@
     "@rollup/plugin-replace": "^2.3.3",
     "@theintern/leadfoot": "^2.3.2",
     "@types/fs-extra": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
     "assertion-error": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
