--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "build:polyfill": "node env/polyfill/build.js",
     "build:libs": "node env/libs/dependent-func/build.js",
     "build": "npm run build:types && npm run build:mjs && npm run build:js",
-    "lint:es": "eslint --plugin markdown --ext js,md .",
+    "lint:es": "eslint --plugin markdown --ext js,ts,md .",
     "lint:ts": "tslint --project tsconfig.eslint.json --config tslint.json --exclude {node_modules,dist,tmp,_trash,docs}/** **/*.ts",
     "lint": "npm run lint:es && npm run lint:ts",
     "test:mocha:src": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./src/test/tests/{node,common}/**/*.*\"",
@@ -86,6 +86,8 @@
     "@theintern/leadfoot": "^2.3.2",
     "@types/fs-extra": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "assertion-error": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
