Removed tslint from project

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "clean": "shx rm -rf {dist,tmp,__sapper__,*.log}",
-    "npm:dep": "depcheck --ignores=\"@types/*,@babel/*,@metahub/karma-rollup-preprocessor,karma-*,eslint-plugin-markdown,tslint-eslint-rules,electron\" --ignore-dirs=_trash,dist,docs,tmp",
+    "npm:dep": "depcheck --ignores=\"@types/*,@babel/*,@metahub/karma-rollup-preprocessor,karma-*,eslint-plugin-markdown,electron\" --ignore-dirs=_trash,dist,docs,tmp",
     "npm:check": "npm run npm:dep",
     "precommit": "npm run npm:check && npm update && npm run test:all:coverage",
     "prepublishOnly": "npm run test:all",
@@ -34,10 +34,8 @@
     "build:polyfill": "node env/polyfill/build.js",
     "build:libs": "node env/libs/dependent-func/build.js",
     "build": "npm run build:types && npm run build:mjs && npm run build:js",
-    "lint:es": "eslint --plugin markdown --ext js,ts,md .",
-    "lint:es:fix": "eslint --plugin markdown --ext js,ts,md . --no-eslintrc -c eslintrc.fix.js --fix",
-    "lint:ts": "tslint --project tsconfig.eslint.json --config tslint.json --exclude {node_modules,dist,tmp,_trash,docs}/** **/*.ts",
-    "lint": "npm run lint:es && npm run lint:ts",
+    "lint": "eslint --plugin markdown --ext js,ts,md .",
+    "lint:fix": "eslint --plugin markdown --ext js,ts,md . --no-eslintrc -c eslintrc.fix.js --fix",
     "test:mocha:src": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./src/test/tests/{node,common}/**/*.*\"",
     "test:mocha:mjs": "mocha --opts ./env/mocha/configs/babel/mocha.opts \"./dist/mjs/test/tests/{node,common}/**/*.*\"",
     "test:mocha:js": "mocha --opts ./env/mocha/configs/no-babel/mocha.opts \"./dist/js/test/tests/{node,common}/**/*.*\"",
@@ -90,7 +88,6 @@
     "@typescript-eslint/eslint-plugin-tslint": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "assertion-error": "^1.1.0",
-    "babel-eslint": "^10.1.0",
     "chai": "^4.2.0",
     "core-js": "^3.6.5",
     "core-js-pure": "^3.6.5",
@@ -135,12 +132,6 @@
     "rollup-plugin-terser": "^5.3.1",
     "rollup-pluginutils": "^2.8.2",
     "shx": "^0.3.2",
-    "tslint": "^6.1.3",
-    "tslint-clean-code": "^0.2.10",
-    "tslint-consistent-codestyle": "^1.16.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "tslint-no-circular-imports": "^0.7.0",
-    "tslint-sonarts": "^1.9.0",
     "typescript": "^4.0.3"
   },
   "peerDependencies": {
